# simple_url_parser

./: Cargo.toml  README.md
examples/: demo.rs
src/: lib.rs
tests/: mod.rs
